Add CSS filter to invert logo colors for visibility

--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@ section {padding:80px 40px;}
   cursor:pointer;
   transition: background 0.3s;
 }
+    header img {
+      filter: invert(1);
+  }
+
+  
 .contact button:hover {background: var(--secondary-color);} 
 footer {background: var(--primary-color);color: var(--light-color);padding:20px;text-align:center;font-size:14px;} 
 @media (max-width:768px) {
