--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <title>PraxisGuardian | IT-Sicherheit & Automatisierung</title>
 <style>
 :root {
-  /* Updated color palette for a modern and professional look */
-  --primary-color: #1D3557; /* soft navy */
-  --secondary-color: #457B9D; /* muted azure */
-  --accent-color: #F1FAEE; /* off white background */
+  /* Professional blue color palette */
+  --primary-color: #002B5B; /* dark navy blue */
+  --secondary-color: #005B82; /* medium blue */
+  --accent-color: #F5F9FC; /* light blue for backgrounds */
   --light-color: #ffffff;
-  --dark-text: #2F3542; /* dark grey for readability */
+  --dark-text: #333333; /* dark grey for readability */
 }
 body {
   margin:0;
@@ -28,14 +28,13 @@ header {
   position: fixed;
   top:0;
   width:100%;
-  background: var(--light-color);
-  color: var(--primary-color);
+  background: var(--primary-color);
+  color: var(--light-color);
   padding: 10px 40px;
   display:flex;
   align-items:center;
   justify-content: space-between;
-  box-shadow:0 2px 4px rgba(0,0,0,0.05);
-  border-bottom:1px solid #e5e5e5;
+  box-shadow:0 2px 4px rgba(0,0,0,0.2);
   z-index:1000;
 }
   /* Hide the original base64 logo and style the new logo */
@@ -45,11 +44,11 @@ header {
   header img.logo-new {
     height:55px;
     display:block;
-    /* Show the logo as-is on a light background */
-    filter: none;
+    /* Invert colors so the dark logo text appears white on dark background */
+    filter: invert(1);
   }
 nav a {
-  color: var(--primary-color);
+  color: var(--light-color);
   margin-left:20px;
   text-decoration:none;
   font-weight:600;
