--- a/index.html
+++ b/index.html
@@ -8,25 +8,21 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body {font-family:'Inter',sans-serif;margin:0;padding:0;}
-header{display:flex;align-items:center;justify-content:space-between;padding:20px;background:#fff;position:fixed;width:100%;top:0;box-shadow:0 2px 4px rgba(0,0,0,0.1);z-index:1000;}
+body{font-family:'Inter',sans-serif;margin:0;padding:0;background:#F5F9FC;color:#333;}
+header{display:flex;align-items:center;justify-content:space-between;padding:16px 20px;background:#fff;position:fixed;top:0;width:100%;z-index:1000;box-shadow:0 2px 4px rgba(0,0,0,0.1);}
 .logo-container{display:flex;align-items:center;gap:10px;}
 .logo-text{font-weight:700;font-size:22px;color:#002B5B;}
 .menu-toggle{display:none;font-size:30px;background:none;border:none;color:#002B5B;cursor:pointer;}
 nav{display:flex;gap:20px;}
 nav a{text-decoration:none;color:#002B5B;font-weight:600;}
-@media (max-width:768px){
-.menu-toggle{display:block;}
-nav{display:none;flex-direction:column;position:absolute;top:70px;right:0;width:100%;background:white;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
-nav.open{display:flex;}
-}
-.hero{margin-top:100px;padding:80px 20px;text-align:center;background:linear-gradient(135deg,#002B5B,#005B82);color:white;}
+.hero{margin-top:100px;text-align:center;padding:100px 20px;background:linear-gradient(135deg,#002B5B,#005B82);color:white;}
+@media(max-width:768px){.menu-toggle{display:block;}nav{display:none;flex-direction:column;position:absolute;top:70px;right:0;width:100%;background:#fff;box-shadow:0 4px 10px rgba(0,0,0,0.1);}nav.open{display:flex;}}
 </style>
 </head>
 <body>
 <header>
   <div class="logo-container">
-    <img src="logo_icon.png" alt="PraxisGuardian Icon" class="logo-icon" style="width:32px;height:32px;">
+    <div style='width:32px;height:32px;background:#005B82;border-radius:6px;'></div>
     <span class="logo-text">PraxisGuardian</span>
   </div>
   <button class="menu-toggle" aria-label="Menü öffnen/schließen">☰</button>
@@ -37,12 +33,10 @@ nav.open{display:flex;}
     <a href="#contact">Kontakt</a>
   </nav>
 </header>
-
 <section class="hero">
   <h1>Schützen Sie Ihre Praxis. Optimieren Sie Ihre Prozesse.</h1>
-  <p>PraxisGuardian bietet ganzheitliche IT-Sicherheitslösungen und Automatisierungen speziell für Arztpraxen.</p>
+  <p>PraxisGuardian bietet ganzheitliche IT-Sicherheitslösungen und Automatisierungsdienste speziell für Arztpraxen.</p>
 </section>
-
 <script>
 document.addEventListener('DOMContentLoaded',()=>{
  const toggle=document.querySelector('.menu-toggle');
